--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,5 @@ services:
       CHROME_PATH: "/usr/bin/google-chrome"
       USE_CHROME_STABLE: "true"
       NODE_ENV: "production"
+volumes:
+  sessions:
