--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   browserless:
-    image: browserless/chrome:latest
+    image: browserless/chrome:1.53-puppeteer-1.20.0
     hostname: browser
     init: true
     volumes:
@@ -20,11 +20,6 @@ services:
       CONNECTION_TIMEOUT: -1
       KEEP_ALIVE: "true"
       WORKSPACE_EXPIRE_DAYS: 1
-      ENABLE_CORS: "true"
-      CHROME_REFRESH_TIME: 86400000
-      DEFAULT_BLOCK_ADS: "true"
-      FUNCTION_ENABLE_INCOGNITO_MODE: "true"
-      ENABLE_XVBF: "true"
       CHROME_PATH: "/usr/bin/google-chrome"
       USE_CHROME_STABLE: "true"
       NODE_ENV: "production"
