--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ services:
       CONNECTION_TIMEOUT: -1
       KEEP_ALIVE: "true"
       WORKSPACE_EXPIRE_DAYS: 1
+      ENABLE_CORS: "true"
+      CHROME_REFRESH_TIME: 86400000
+      DEFAULT_BLOCK_ADS: "true"
+      FUNCTION_ENABLE_INCOGNITO_MODE: "true"
+      ENABLE_XVBF: "true"
       CHROME_PATH: "/usr/bin/google-chrome"
       USE_CHROME_STABLE: "true"
       NODE_ENV: "production"
-      ENABLE_XVBF: "true"
-      MAX_CONCURRENT_SESSIONS: 100,
-      QUEUE_LENGTH: 100,
-      ENABLE_CORS: "true"
 volumes:
   sessions:
